--- a/app/assets/stylesheets/lumen/variables.less
+++ b/app/assets/stylesheets/lumen/variables.less
@@ -72,6 +72,8 @@
 @headings-line-height:    1.1;
 @headings-color:          @gray-dark;
 
+// Fix from https://github.com/Nemo64/meteor-bootstrap/issues/42
+@form-group-margin-bottom: 15px;
 
 //== Iconography
 //
